# HueGlib

./: .autotools  .cproject  .project  AUTHORS  LICENSE  Makefile.am  NEWS  README  README.md  configure.ac
HueGlib/: HueGlib.c  HueUser.c  Makefile.am
exampleProgram/: Makefile.am  exampleProgram.c
include/: HueBridge.h  HueGlib.h  HueGroup.h  HueLight.h  HueSchedule.h  HueUser.h  Makefile.am
